libs/natparse/src/test/resources/projects/invalidModuleTypeTests/Natural-Libraries/ALIB/CALLPROG.NSN
DEFINE DATA LOCAL
END-DEFINE

CALLNAT 'PROG'

END
